# Tauri-bird

./: Cargo.toml  README.md  package-lock.json  package.json
js/: index.js
src/: bird.rs  block.rs  engine.rs  lib.rs  player.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/engine/: browser.rs  fps_counter.rs  game.rs  keyboard.rs  rect.rs  renderer.rs  util.rs
static/: index.html
